--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "author": "geektrust",
   "license": "ISC",
-  "dependencies": {
-    "mocha": "^10.0.0"
+  "devDependencies": {
+    "mocha": "^11.1.0"
   }
 }
